[fix]言語切り替えボタンと詳細ボタンの位置を微調整

--- a/iOSEngineerCodeCheck/View/Base.lproj/Main.storyboard
+++ b/iOSEngineerCodeCheck/View/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Root View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3UX-T4-mwU">
-                                <rect key="frame" x="129" y="44" width="156" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's check GitHub Repository" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3UX-T4-mwU">
+                                <rect key="frame" x="91.5" y="44" width="231" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -32,22 +32,31 @@
                                 </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Repository" id="foR-iV-YDA">
-                                        <rect key="frame" x="0.0" y="88.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="88.5" width="414" height="256.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="foR-iV-YDA" id="E6n-8o-MZQ">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="256.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ocv-u9-MaQ">
-                                                    <rect key="frame" x="20" y="11.5" width="374" height="21"/>
+                                                    <rect key="frame" x="72" y="118" width="322" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="github" translatesAutoresizingMaskIntoConstraints="NO" id="Eqf-Q0-3HC">
+                                                    <rect key="frame" x="20" y="0.0" width="43.5" height="256.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="43.5" id="ZD2-jP-nMA"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Eqf-Q0-3HC" secondAttribute="bottom" id="2XB-g5-eQv"/>
                                                 <constraint firstAttribute="trailing" secondItem="Ocv-u9-MaQ" secondAttribute="trailing" constant="20" id="DWA-fy-C4f"/>
-                                                <constraint firstItem="Ocv-u9-MaQ" firstAttribute="leading" secondItem="E6n-8o-MZQ" secondAttribute="leading" constant="20" id="MhQ-5E-oqk"/>
+                                                <constraint firstItem="Eqf-Q0-3HC" firstAttribute="leading" secondItem="E6n-8o-MZQ" secondAttribute="leading" constant="20" id="Npj-7g-ZfU"/>
+                                                <constraint firstItem="Ocv-u9-MaQ" firstAttribute="leading" secondItem="Eqf-Q0-3HC" secondAttribute="trailing" constant="8.5" id="fm5-dt-bZp"/>
+                                                <constraint firstItem="Eqf-Q0-3HC" firstAttribute="top" secondItem="E6n-8o-MZQ" secondAttribute="top" id="hbz-cp-fT4"/>
                                                 <constraint firstItem="Ocv-u9-MaQ" firstAttribute="centerY" secondItem="E6n-8o-MZQ" secondAttribute="centerY" id="wm3-oB-z6r"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -85,22 +94,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Iim-eb-8Ad">
-                                <rect key="frame" x="20" y="96" width="374" height="374"/>
+                                <rect key="frame" x="20" y="116" width="374" height="374"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Iim-eb-8Ad" secondAttribute="height" multiplier="1:1" id="CoT-OC-9DA"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4q1-pG-WSB">
-                                <rect key="frame" x="20" y="498" width="374" height="30"/>
+                                <rect key="frame" x="20" y="518" width="374" height="30"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" systemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gWL-IH-i3D" userLabel="pocketArea">
-                                <rect key="frame" x="20" y="536" width="374" height="272"/>
+                                <rect key="frame" x="20" y="556" width="374" height="242"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="oOe-O2-3RS">
-                                        <rect key="frame" x="10" y="10" width="354" height="252"/>
+                                        <rect key="frame" x="10" y="10" width="354" height="222"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3M-QO-Kom">
                                                 <rect key="frame" x="0.0" y="0.0" width="66.5" height="17"/>
@@ -148,18 +157,8 @@
                                     <constraint firstAttribute="bottom" secondItem="oOe-O2-3RS" secondAttribute="bottom" constant="10" id="nhj-uI-hoF"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日本語にする" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BsQ-z8-CYk">
-                                <rect key="frame" x="20" y="67.5" width="104" height="20.5"/>
-                                <gestureRecognizers/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" systemColor="systemPinkColor"/>
-                                <nil key="highlightedColor"/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="ham-xl-6mH" appends="YES" id="c3a-wb-yAb"/>
-                                </connections>
-                            </label>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="More" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZI-0U-3Jw">
-                                <rect key="frame" x="354.5" y="67.5" width="39.5" height="20.5"/>
+                                <rect key="frame" x="354.5" y="95.5" width="39.5" height="20.5"/>
                                 <gestureRecognizers/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="systemBlueColor"/>
@@ -168,23 +167,33 @@
                                     <outletCollection property="gestureRecognizers" destination="0UT-X0-45R" appends="YES" id="Wvw-nL-Ujd"/>
                                 </connections>
                             </label>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日本語にする" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BsQ-z8-CYk">
+                                <rect key="frame" x="20" y="95.5" width="104" height="20.5"/>
+                                <gestureRecognizers/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
+                                <nil key="highlightedColor"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="ham-xl-6mH" appends="YES" id="c3a-wb-yAb"/>
+                                </connections>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="srK-fe-i1b"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="gWL-IH-i3D" firstAttribute="leading" secondItem="Iim-eb-8Ad" secondAttribute="leading" id="0NG-I1-MdQ"/>
-                            <constraint firstItem="Iim-eb-8Ad" firstAttribute="top" secondItem="RZI-0U-3Jw" secondAttribute="bottom" constant="8" id="2AS-2Q-Opt"/>
                             <constraint firstItem="gWL-IH-i3D" firstAttribute="trailing" secondItem="Iim-eb-8Ad" secondAttribute="trailing" id="Ag5-ii-vRF"/>
-                            <constraint firstItem="gWL-IH-i3D" firstAttribute="bottom" secondItem="srK-fe-i1b" secondAttribute="bottom" id="E6H-TI-FyU"/>
                             <constraint firstItem="Iim-eb-8Ad" firstAttribute="leading" secondItem="srK-fe-i1b" secondAttribute="leading" constant="20" id="EMR-2C-CyU"/>
+                            <constraint firstItem="Iim-eb-8Ad" firstAttribute="top" secondItem="BsQ-z8-CYk" secondAttribute="bottom" id="FX1-4t-jfB"/>
                             <constraint firstItem="4q1-pG-WSB" firstAttribute="top" secondItem="Iim-eb-8Ad" secondAttribute="bottom" constant="28" id="G2L-KM-330"/>
                             <constraint firstItem="srK-fe-i1b" firstAttribute="trailing" secondItem="Iim-eb-8Ad" secondAttribute="trailing" constant="20" id="IgU-EN-fM3"/>
+                            <constraint firstItem="Iim-eb-8Ad" firstAttribute="top" secondItem="RZI-0U-3Jw" secondAttribute="bottom" id="MqB-oP-Wez"/>
+                            <constraint firstItem="srK-fe-i1b" firstAttribute="bottom" secondItem="gWL-IH-i3D" secondAttribute="bottom" constant="10" id="VXg-vb-B0h"/>
                             <constraint firstItem="RZI-0U-3Jw" firstAttribute="trailing" secondItem="Iim-eb-8Ad" secondAttribute="trailing" id="W0o-dQ-fSa"/>
                             <constraint firstItem="4q1-pG-WSB" firstAttribute="trailing" secondItem="Iim-eb-8Ad" secondAttribute="trailing" id="cSe-zR-hlY"/>
                             <constraint firstItem="Iim-eb-8Ad" firstAttribute="leading" secondItem="BsQ-z8-CYk" secondAttribute="leading" id="fjl-oS-HM8"/>
-                            <constraint firstItem="Iim-eb-8Ad" firstAttribute="top" secondItem="BsQ-z8-CYk" secondAttribute="bottom" constant="8" id="hl5-it-qGY"/>
                             <constraint firstItem="4q1-pG-WSB" firstAttribute="leading" secondItem="Iim-eb-8Ad" secondAttribute="leading" id="jHn-8t-9ZF"/>
-                            <constraint firstItem="Iim-eb-8Ad" firstAttribute="centerY" secondItem="srK-fe-i1b" secondAttribute="centerY" multiplier="0.7" id="ruB-l0-4VM"/>
+                            <constraint firstItem="Iim-eb-8Ad" firstAttribute="centerY" secondItem="srK-fe-i1b" secondAttribute="centerY" multiplier="0.75" id="ruB-l0-4VM"/>
                             <constraint firstItem="gWL-IH-i3D" firstAttribute="top" secondItem="4q1-pG-WSB" secondAttribute="bottom" constant="8" id="wp7-ad-n9c"/>
                         </constraints>
                     </view>
@@ -244,7 +253,7 @@
                                     <outletCollection property="gestureRecognizers" destination="fY3-Hg-L4t" appends="YES" id="47L-45-Tfe"/>
                                 </connections>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4R-bH-gZg">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4R-bH-gZg">
                                 <rect key="frame" x="20" y="490" width="374" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
@@ -285,6 +294,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="github" width="256" height="256"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
